remove Xdisplay support (disabled for quite some time, anyway)

--- a/src/alu2d/Makefile.am
+++ b/src/alu2d/Makefile.am
@@ -2,4 +2,4 @@
 AUTOMAKE_OPTIONS = foreign 1.5
 
 EXTRA_DIST = grid.cc  hdlrw.cc   mknbrs.cc  vmmap.cc \
-  xdisplay.cc  handle.cc  triang.cc  vtx_btree.cc
+  handle.cc  triang.cc  vtx_btree.cc
