--- a/misc/alugrid.cfg
+++ b/misc/alugrid.cfg
@@ -1,6 +1,6 @@
 0.0
 1.2
-13
+11
 
 
 --- 
@@ -12,15 +12,10 @@ Graph partitioning method:
 NONE = 0
 COLLECT = 1
 
-PARTY_helpfulSet = 3
-PARTY_kernighanLin = 4
-PARTY_random = 5
-PARTY_scattered = 6
-PARTY_linear = 7
-PARTY_breathfirst = 8
-PARTY_cutfirst = 9
+ALUGRID_SpaceFillingCurve  = 4 
 
-METIS_PartGraphKway = 11
-METIS_PartGraphRecursive = 12
+METIS_PartGraphKway        = 11
+METIS_PartGraphRecursive   = 12
 
-ParMETIS_V3_AdaptiveRepart = 13
+ParMETIS_V3_PartKway       = 13
+ParMETIS_V3_AdaptiveRepart = 14
