--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,31 @@
-/Makefile
-/Makefile.in
-/config.*
-/configure
 /aclocal.m4
+/am
 /autom4te.cache
+/configure
+/config.guess
+/config.h
+/config.h.in
+/config.lt
+/config.status
+/config.sub
 /depcomp
+/dependencies.m4
+/dune-alugrid.pc
+/dune-alugrid-*.tar.gz
 /install-sh
-/missing
-/mkinstalldirs
 /libtool
-/dune.pc
-/semantic.cache
-/configure.lineno
-/stamp-h1
-/dune-*.tar.gz
-/bin
-/lib
-/include
-/.deps
-/alugrid.pc
-/*.swp
 /ltmain.sh
-*.vtu
-*.vtk
-*.pvtu
+/missing
+/stamp-h1
+
+Makefile
+Makefile.in
+.deps
+.libs
+
+*.la
+*.lo
+*.log
 *.o
+*.tmp
+*.swp
