--- a/m4/Makefile.am
+++ b/m4/Makefile.am
@@ -1,8 +1,8 @@
-# $Id$
-
-ALLM4S = alu3d_all.m4 alu3d_mpi.m4 metis.m4 xdr.m4
+M4FILES = dune-alugrid.m4
 
 aclocaldir = $(datadir)/aclocal
-aclocal_DATA = $(ALLM4S)
+aclocal_DATA = $(M4FILES)
 
-EXTRA_DIST = $(ALLM4S)
+EXTRA_DIST = $(M4FILES)
+
+include $(top_srcdir)/am/global-rules
