--- a/dune/alugrid/src/Makefile.am
+++ b/dune/alugrid/src/Makefile.am
@@ -1,14 +1,14 @@
 
-SUBDIRS = serial parallel duneinterface alu2d 
+SUBDIRS = serial parallel duneinterface 2d 
 
 # here the headers to install are defined 
 include serial/Makefile.am.include
 include parallel/Makefile.am.include
 include duneinterface/Makefile.am.include
-include alu2d/Makefile.am.include
+include 2d/Makefile.am.include
 
 # work arround for automake versions < 1.8 
-ALUGRID_CPPFLAGS = $(ALL_PKG_CPPFLAGS) -I$(srcdir)/serial -I$(srcdir)/parallel -I$(srcdir)/duneinterface -I$(srcdir)/alu2d
+ALUGRID_CPPFLAGS = $(ALL_PKG_CPPFLAGS) -I$(srcdir)/serial -I$(srcdir)/parallel -I$(srcdir)/duneinterface -I$(srcdir)/2d
 
 # build libALU3dGrid 
 lib_LTLIBRARIES = libalugrid.la
