--- a/dune/alugrid/src/parallel/Makefile.am
+++ b/dune/alugrid/src/parallel/Makefile.am
@@ -1,3 +1,5 @@
 EXTRA_DIST = gitter_pll_idn.cc   gitter_pll_ldb.cc  gitter_pll_sti.cc\
 mpAccess_MPI.cc  mpAccess_STAR.cc  gitter_pll_impl.cc  gitter_pll_mgb.cc  mpAccess.cc \
 gitter_hexa_top_pll.cc gitter_tetra_top_pll.cc
+
+include $(top_srcdir)/am/global-rules
