start on headercheck

--- a/dune/alugrid/src/2d/Makefile.am
+++ b/dune/alugrid/src/2d/Makefile.am
@@ -1,2 +1,5 @@
 EXTRA_DIST = grid.cc  hdlrw.cc   mknbrs.cc  vmmap.cc \
   handle.cc  triang.cc  vtx_btree.cc
+
+include $(top_srcdir)/am/global-rules
+
