--- a/dune/alugrid/src/serial/Makefile.am
+++ b/dune/alugrid/src/serial/Makefile.am
@@ -1,3 +1,6 @@
 EXTRA_DIST = gitter_geo.cc  gitter_impl.cc  gitter_mgb.cc  gitter_sti.cc  mapp_cube_3d.cc\
 mapp_tetra_3d.cc  myalloc.cc  ghost_elements.cc ghost_info.cc \
 gitter_hexa_top.cc gitter_tetra_top.cc
+
+include $(top_srcdir)/am/global-rules
+
