more on include path and install paths

--- a/dune/alugrid/src/duneinterface/Makefile.am
+++ b/dune/alugrid/src/duneinterface/Makefile.am
@@ -1,4 +1,9 @@
 EXTRA_DIST = gitter_dune_impl.cc  gitter_dune_pll_impl.cc
 
+duneif=.
+duneinterfacehdrs= $(duneif)/gitter_dune_impl.h $(duneif)/gitter_dune_pll_impl.h
+
+nobase_include_HEADERS = $(duneinterfacehdrs)
+
 include $(top_srcdir)/am/global-rules
 
