--- a/dune/alugrid/src/Makefile.am
+++ b/dune/alugrid/src/Makefile.am
@@ -1,23 +1,13 @@
 SUBDIRS = serial parallel duneinterface 2d 
 
-# here the headers to install are defined 
-include serial/Makefile.am.include
-include parallel/Makefile.am.include
-include duneinterface/Makefile.am.include
-include 2d/Makefile.am.include
-
-# work arround for automake versions < 1.8 
-ALUGRID_CPPFLAGS = $(ALL_PKG_CPPFLAGS) -I$(srcdir)/serial -I$(srcdir)/parallel -I$(srcdir)/duneinterface -I$(srcdir)/2d
-
 # build libALU3dGrid 
 lib_LTLIBRARIES = libalugrid.la
 
 # headers to install 
-nobase_include_HEADERS = alugrid_serial.h alugrid_parallel.h alugrid_2d.h stlheaders.h indexstack.h projectvertex.h $(serialhdrs) $(parallelhdrs) $(duneinterfacehdrs) $(alu2dhdrs)
+nobase_include_HEADERS = alugrid_serial.h alugrid_parallel.h alugrid_2d.h stlheaders.h indexstack.h projectvertex.h 
 
 # add all package flags 
-AM_CPPFLAGS = -Wfatal-errors $(ALUGRID_CPPFLAGS)
-libalugrid_la_CPPFLAGS = $(ALUGRID_CPPFLAGS) $(ALL_PKG_CPPFLAGS)
+libalugrid_la_CPPFLAGS = $(ALL_PKG_CPPFLAGS)
 libalugrid_la_LIBADD = $(PARMETIS_LDFLAGS) $(PARMETIS_LIBS) $(METIS_LDFLAGS) $(METIS_LIBS) $(MPI_LDFLAGS) $(MPI_LIBS)
 
 if MPI 
