first two .cc files compiling stand-alone

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -1,6 +1,7 @@
 lib_LTLIBRARIES = libalugrid_serial.la libdunealugrid.la
 
 libalugrid_serial_la_SOURCES = \
+	$(top_srcdir)/dune/alugrid/src/serial/gitter_hexa_top.cc \
 	$(top_srcdir)/dune/alugrid/src/serial/gitter_tetra_top.cc
 
 libalugrid_serial_la_CPPFLAGS = $(AM_CPPFLAGS)
