--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -2,6 +2,7 @@ lib_LTLIBRARIES = libalugrid_serial.la libdunealugrid.la
 
 libalugrid_serial_la_SOURCES = \
 	$(top_srcdir)/dune/alugrid/src/serial/gitter_hexa_top.cc \
+	$(top_srcdir)/dune/alugrid/src/serial/gitter_sti.cc \
 	$(top_srcdir)/dune/alugrid/src/serial/gitter_tetra_top.cc \
 	$(top_srcdir)/dune/alugrid/src/serial/myalloc.cc
 
