--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -20,6 +20,7 @@ libalugrid_serial_la_LIBADD =
 
 libalugrid_parallel_la_SOURCES = \
 	$(top_srcdir)/dune/alugrid/src/parallel/mpAccess.cc \
+	$(top_srcdir)/dune/alugrid/src/parallel/gitter_pll_ldb.cc \
 	$(top_srcdir)/dune/alugrid/src/parallel/gitter_pll_sti.cc
 
 libalugrid_parallel_la_CPPFLAGS = $(AM_CPPFLAGS)
