--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -21,6 +21,7 @@ libalugrid_serial_la_LIBADD =
 libalugrid_parallel_la_SOURCES = \
 	$(top_srcdir)/dune/alugrid/src/parallel/mpAccess.cc \
 	$(top_srcdir)/dune/alugrid/src/parallel/gitter_hexa_top_pll.cc \
+	$(top_srcdir)/dune/alugrid/src/parallel/gitter_pll_impl.cc \
 	$(top_srcdir)/dune/alugrid/src/parallel/gitter_pll_ldb.cc \
 	$(top_srcdir)/dune/alugrid/src/parallel/gitter_pll_sti.cc
 
