make 3d DUNE bindings work

--- a/dune/alugrid/Makefile.am
+++ b/dune/alugrid/Makefile.am
@@ -1,6 +1,6 @@
 alugriddir = $(includedir)/dune/alugrid
-alugrid_HEADERS = grid.hh
+alugrid_HEADERS = dgf.hh grid.hh
 
-SUBDIRS = common 2d 3d src
+SUBDIRS = common 2d 3d src test
 
 include $(top_srcdir)/am/global-rules
