add another .cc to the lib

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -2,6 +2,7 @@ lib_LTLIBRARIES = libalugrid_2d.la libalugrid_serial.la libalugrid_parallel.la l
 
 libalugrid_2d_la_SOURCES = \
 	$(top_srcdir)/dune/alugrid/src/2d/grid.cc \
+	$(top_srcdir)/dune/alugrid/src/2d/hdlrw.cc \
 	$(top_srcdir)/dune/alugrid/src/2d/mknbrs.cc \
 	$(top_srcdir)/dune/alugrid/src/2d/triang.cc \
 	$(top_srcdir)/dune/alugrid/src/2d/vmmap.cc \
