migrate contents of alugrid_2d.h into alu2dinclude.hh

--- a/dune/alugrid/src/Makefile.am
+++ b/dune/alugrid/src/Makefile.am
@@ -1,6 +1,6 @@
-SUBDIRS = serial parallel duneinterface 2d 
+srcdir = $(includedir)/dune/alugrid/src
+src_HEADERS = indexstack.h projectvertex.h 
 
-# headers to install 
-nobase_include_HEADERS = alugrid_2d.h stlheaders.h indexstack.h projectvertex.h 
+SUBDIRS = serial parallel duneinterface 2d 
 
 include $(top_srcdir)/am/global-rules
