put dune bindings for 2d grid into the lib

--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -54,12 +54,12 @@ libalugrid_mpi_la_LDFLAGS = $(AM_LDFLAGS) $(DUNEMPILDFLAGS)
 libalugrid_mpi_la_LIBADD = $(DUNEMPILIBS)
 
 libdunealugrid_la_SOURCES = \
+	$(top_srcdir)/dune/alugrid/2d/intersection.cc \
+	$(top_srcdir)/dune/alugrid/2d/alu2dgridfactory.cc \
 	$(top_srcdir)/dune/alugrid/3d/faceutility.cc \
 	$(top_srcdir)/dune/alugrid/3d/mappings.cc \
 	$(top_srcdir)/dune/alugrid/3d/topology.cc
 
-#	$(top_srcdir)/dune/alugrid/2d/intersection.cc
-#	$(top_srcdir)/dune/alugrid/2d/alu2dgridfactory.cc
 
 libdunealugrid_la_CPPFLAGS = $(AM_CPPFLAGS)
 libdunealugrid_la_LDFLAGS = $(AM_LDFLAGS)
