--- a/dune/alugrid/2d/Makefile.am
+++ b/dune/alugrid/2d/Makefile.am
@@ -2,8 +2,8 @@ alu2dgriddir = $(includedir)/dune/alugrid/2d
 alu2dgrid_HEADERS = alu2dinclude.hh  entity_imp.cc  geometry_imp.cc \
   grid_imp.cc  intersection.hh  iterator.hh  entity.hh  geometry.hh   grid.hh \
   indexsets.hh  intersection_imp.cc  iterator_imp.cc datahandle.hh \
-  alu2dgridfactory.hh  alugrid.hh capabilities.hh  bndprojection.hh \
-  intersection.cc  alu2dgridfactory.cc  entityseed.hh 
+  gridfactory.hh  gridfactory.cc alugrid.hh capabilities.hh  bndprojection.hh \
+  intersection.cc entityseed.hh 
 
 headercheck_IGNORE = $(alu2dgrid_HEADERS)
 
