--- a/dune/alugrid/common/Makefile.am
+++ b/dune/alugrid/common/Makefile.am
@@ -1,15 +1,16 @@
 alucommondir = $(includedir)/dune/alugrid/common
 alucommon_HEADERS = backuprestore.hh \
-                    bndprojection.hh \
-                    capabilities.hh \
-                    declaration.hh \
-                    defaultindexsets.hh \
-                    geostorage.hh \
-                    intersectioniteratorwrapper.hh \
-                    interfaces.hh \
-                    memory.hh \
-                    objectfactory.hh \
-                    persistentcontainer.hh \
-                    transformation.hh
+										bndprojection.hh \
+										capabilities.hh \
+										checkparallel.hh \
+										declaration.hh \
+										defaultindexsets.hh \
+										geostorage.hh \
+										intersectioniteratorwrapper.hh \
+										interfaces.hh \
+										memory.hh \
+										objectfactory.hh \
+										persistentcontainer.hh \
+										transformation.hh
 
 include $(top_srcdir)/am/global-rules
