--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -1,5 +1,5 @@
-AM_CPPFLAGS = ${ALL_PKG_CPPFLAGS} ${DUNEMPICPPFLAGS}
-LDADD = ${ALL_PKG_LIBS} ${DUNEMPILDFLAGS} ${DUNEMPILIBS}
+AM_CPPFLAGS = ${ALL_PKG_CPPFLAGS} ${DUNEMPICPPFLAGS} 
+LDADD = ${ALL_PKG_LIBS} ${DUNEMPILDFLAGS} ${DUNEMPILIBS} -ldunealugrid -L../lib
 
 # headers to install 
 noinst_PROGRAMS = aluball
