--- a/configure.ac
+++ b/configure.ac
@@ -8,8 +8,8 @@ AM_CONFIG_HEADER([config.h])
 DUNE_CHECK_ALL
 
 AC_SUBST(AM_CPPFLAGS, "\${DUNE_CPPFLAGS} \${PARMETIS_CPPFLAGS} \${METIS_INCLUDE}" )
-AC_SUBST(AM_LDFLAGS, "\${DUNE_LDFLAGS} \${PARMETIS_LDFLAGS} \${METIS_LDFLAGS}")
-AC_SUBST([LDADD], '$(top_builddir)/lib/libdunealugrid.la \${DUNE_LIBS} \${PARMETIS_LIBS} \${METIS_LIB}')
+AC_SUBST(AM_LDFLAGS, "\${DUNE_LDFLAGS} \${PARMETIS_LDFLAGS} \${METIS_LDFLAGS} " )
+AC_SUBST([LDADD], "\$(top_builddir)/lib/libdunealugrid.la \${DUNE_LIBS} \${PARMETIS_LIBS} \${METIS_LIB} ")
 
 # generate Makefiles
 AC_CONFIG_FILES([
