--- a/dune/alugrid/impl/Makefile.am
+++ b/dune/alugrid/impl/Makefile.am
@@ -1,7 +1,7 @@
 impldir = $(includedir)/dune/alugrid/impl
 impl_HEADERS = indexstack.h projectvertex.h 
 
-SUBDIRS = serial parallel duneinterface 2d 
+SUBDIRS = serial parallel duneinterface 2d test
 
 EXTRA_DIST = starmpi.c
 
