make old examples work again - at least those that work in alugrid-dev for me

--- a/configure.ac
+++ b/configure.ac
@@ -33,6 +33,7 @@ AC_CONFIG_FILES([
   misc/Makefile
   misc/macrogrids/Makefile
   misc/versioncheck/Makefile
+  misc/examples/Makefile
   dune-alugrid.pc
 ])
 
