--- a/configure.ac
+++ b/configure.ac
@@ -30,6 +30,7 @@ AC_CONFIG_FILES([
   m4/Makefile
   examples/Makefile
   examples/fv/Makefile
+  examples/ball/Makefile
   misc/Makefile
   misc/macrogrids/Makefile
   misc/versioncheck/Makefile
