--- a/configure.ac
+++ b/configure.ac
@@ -7,9 +7,9 @@ AM_CONFIG_HEADER([config.h])
 
 DUNE_CHECK_ALL
 
-AC_SUBST(AM_CPPFLAGS, "\${DUNE_CPPFLAGS} \${PARMETIS_CPPFLAGS} \${METIS_INCLUDE}" )
-AC_SUBST(AM_LDFLAGS, "\${DUNE_LDFLAGS} \${PARMETIS_LDFLAGS} \${METIS_LDFLAGS} " )
-AC_SUBST([LDADD], "\$(top_builddir)/lib/libdunealugrid.la \${DUNE_LIBS} \${PARMETIS_LIBS} \${METIS_LIB} ")
+AC_SUBST(AM_CPPFLAGS, "\${DUNE_CPPFLAGS} \${ZOLTAN_CPPFLAGS} \${PARMETIS_CPPFLAGS} \${METIS_INCLUDE}" )
+AC_SUBST(AM_LDFLAGS, "\${DUNE_LDFLAGS} \${ZOLTAN_LDFLAGS} \${PARMETIS_LDFLAGS} \${METIS_LDFLAGS} " )
+AC_SUBST([LDADD], "\$(top_builddir)/lib/libdunealugrid.la \${ZOLTAN_LIBS} \${DUNE_LIBS} \${PARMETIS_LIBS} \${METIS_LIB} ")
 
 # generate Makefiles
 AC_CONFIG_FILES([
