added some missing files for dist

--- a/dune/alugrid/impl/serial/Makefile.am
+++ b/dune/alugrid/impl/serial/Makefile.am
@@ -7,6 +7,6 @@ serial_HEADERS = dlmalloc.h gatherscatter.hh ghost_elements.h ghost_info.h \
 
 EXTRA_DIST = ghost_elements.cc ghost_info.cc gitter_geo.cc gitter_hexa_top.cc \
 	     gitter_impl.cc gitter_mgb.cc gitter_sti.cc gitter_tetra_top.cc \
-	     mapp_cube_3d.cc mapp_tetra_3d.cc myalloc.cc
+	     mapp_cube_3d.cc mapp_tetra_3d.cc myalloc.cc dlmalloc.c
 
 include $(top_srcdir)/am/global-rules
