--- a/examples/loadbalancing/Makefile.am
+++ b/examples/loadbalancing/Makefile.am
@@ -1,7 +1,7 @@
 GRIDTYPE = ALUGRID_CUBE
 GRIDDIM = 3
 
-EXTRA_DIST = alugrid.cfg
+EXTRA_DIST = 
 
 DATACLEANFILES = dgfparser.log
 CLEANFILES = $(DATACLEANFILES)
