--- a/examples/alugrid.cfg
+++ b/examples/alugrid.cfg
@@ -1,6 +1,6 @@
 0.0
 1.2
-4
+12
 
 
 --- 
@@ -18,3 +18,4 @@ ALUGRID_SpaceFillingCurve  = 5
 METIS_PartGraphKway        = 11
 METIS_PartGraphRecursive   = 12
 
+ZOLTAN_LB_Partition = 13
