--- a/lib/Makefile.am
+++ b/lib/Makefile.am
@@ -12,6 +12,7 @@ libalugrid_2d_la_LDFLAGS = $(AM_LDFLAGS)
 libalugrid_2d_la_LIBADD = 
 
 libalugrid_serial_la_SOURCES = \
+	$(top_srcdir)/dune/alugrid/impl/serial/ghost_info.cc \
 	$(top_srcdir)/dune/alugrid/impl/serial/gitter_geo.cc \
 	$(top_srcdir)/dune/alugrid/impl/serial/gitter_hexa_top.cc \
 	$(top_srcdir)/dune/alugrid/impl/serial/gitter_impl.cc \
@@ -28,7 +29,6 @@ libalugrid_serial_la_LDFLAGS = $(AM_LDFLAGS)
 libalugrid_serial_la_LIBADD = 
 
 libalugrid_parallel_la_SOURCES = \
-	$(top_srcdir)/dune/alugrid/impl/serial/ghost_info.cc \
 	$(top_srcdir)/dune/alugrid/impl/serial/ghost_elements.cc \
 	$(top_srcdir)/dune/alugrid/impl/duneinterface/gitter_dune_pll_impl.cc \
 	$(top_srcdir)/dune/alugrid/impl/parallel/mpAccess.cc \
@@ -42,7 +42,7 @@ libalugrid_parallel_la_SOURCES = \
 
 libalugrid_parallel_la_CPPFLAGS = $(AM_CPPFLAGS)
 libalugrid_parallel_la_LDFLAGS = $(AM_LDFLAGS)
-libalugrid_parallel_la_LIBADD = $(ALL_PKG_LIBS)
+libalugrid_parallel_la_LIBADD = $(ALL_PKG_LIBS) -llibalugrid_serial.la
 
 ALUGRID_IMPL_LIBS=libalugrid_2d.la libalugrid_parallel.la libalugrid_serial.la 
 lib_LTLIBRARIES = $(ALUGRID_IMPL_LIBS) libdunealugrid.la
