looked at bit more at zoltan binding - still not working

--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -8,6 +8,12 @@ EXTRA_DIST = alugrid.cfg
 DATACLEANFILES = dgfparser.log
 CLEANFILES = $(DATACLEANFILES)
 
+examplesdir = $(includedir)/examples
+examples_HEADERS = \
+  adaptation.hh        diagnostics.hh  piecewisefunction.hh  problem-euler.hh \
+  problem-transport.hh datamap.hh      fvscheme.hh           problem-ball.hh \
+  problem.hh           threadmanager.hh
+
 check_PROGRAMS = main_transport main_ball main_euler
 
 main_transport_SOURCES = main.cc
@@ -16,12 +22,12 @@ main_tranaport_LDFLAGS = $(AM_LDFLAGS) $(DUNEMPILDFLAGS)
 main_transport_LDADD = $(LDADD) $(DUNEMPILIBS)
 
 main_ball_SOURCES = main.cc
-main_ball_CPPFLAGS = $(AM_CPPFLAGS) $(DUNEMPICPPFLAGS) $(GRIDDIM_CPPFLAGS) -DBALL
+main_ball_CPPFLAGS = $(AM_CPPFLAGS) $(DUNEMPICPPFLAGS) $(GRIDDIM_CPPFLAGS) -DBALL $(ZOLTAN_CPPFLAGS)
 main_ball_LDFLAGS = $(AM_LDFLAGS) $(DUNEMPILDFLAGS)
 main_ball_LDADD = $(LDADD) $(DUNEMPILIBS)
 
 main_euler_SOURCES = main.cc
-main_euler_CPPFLAGS = $(AM_CPPFLAGS) $(DUNEMPICPPFLAGS) $(GRIDDIM_CPPFLAGS) -DEULER
+main_euler_CPPFLAGS = $(AM_CPPFLAGS) $(DUNEMPICPPFLAGS) $(GRIDDIM_CPPFLAGS) -DEULER $(ZOLTAN_CPPFLAGS)
 main_euler_LDFLAGS = $(AM_LDFLAGS) $(DUNEMPILDFLAGS)
 main_euler_LDADD = $(LDADD) $(DUNEMPILIBS)
 
