--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -18,7 +18,7 @@ check_PROGRAMS = main_transport main_ball main_euler
 
 main_transport_SOURCES = main.cc
 main_transport_CPPFLAGS = $(AM_CPPFLAGS) $(DUNEMPICPPFLAGS) $(GRIDDIM_CPPFLAGS) -DTRANSPORT $(ZOLTAN_CPPFLAGS)
-main_tranaport_LDFLAGS = $(AM_LDFLAGS) $(DUNEMPILDFLAGS)
+main_transport_LDFLAGS = $(AM_LDFLAGS) $(DUNEMPILDFLAGS)
 main_transport_LDADD = $(LDADD) $(DUNEMPILIBS)
 
 main_ball_SOURCES = main.cc
