continued with Zoltan graph partitioning - moved master method to edges of graph

--- a/examples/alugrid.cfg
+++ b/examples/alugrid.cfg
@@ -1,6 +1,6 @@
 0.0
 1.2
-11
+5
 
 
 --- 
@@ -18,4 +18,5 @@ ALUGRID_SpaceFillingCurve  = 5
 METIS_PartGraphKway        = 11
 METIS_PartGraphRecursive   = 12
 
-ZOLTAN_LB_Partition = 13
+ZOLTAN_LB_HSFC = 13
+ZOLTAN_LB_GRAPH = 14
