added new partitioning method (parmetis)

--- a/examples/alugrid.cfg
+++ b/examples/alugrid.cfg
@@ -2,7 +2,6 @@
 1.2
 11
 
-
 --- 
 Info
 
@@ -20,3 +19,4 @@ METIS_PartGraphRecursive   = 12
 
 ZOLTAN_LB_HSFC = 13
 ZOLTAN_LB_GRAPH = 14
+ZOLTAN_PARMETIS = 15
