Improved example for loadbalancing including call to zoltan on dune side

--- a/examples/loadbalancing/Makefile.am
+++ b/examples/loadbalancing/Makefile.am
@@ -14,7 +14,7 @@ exampleslb_HEADERS = \
 if ! ALUGRID 
 check_PROGRAMS = main
 
-main_SOURCES = main.cc loadbalance.cc
+main_SOURCES = main.cc 
 main_CPPFLAGS = $(AM_CPPFLAGS) $(DUNEMPICPPFLAGS) $(GRIDDIM_CPPFLAGS) 
 main_LDFLAGS = $(AM_LDFLAGS) $(DUNEMPILDFLAGS)
 main_LDADD = $(LDADD) $(DUNEMPILIBS)
