make make headercheck work

--- a/examples/loadbalancing/Makefile.am
+++ b/examples/loadbalancing/Makefile.am
@@ -8,7 +8,9 @@ CLEANFILES = $(DATACLEANFILES)
 
 exampleslbdir = $(includedir)/examples/loadbalanacing
 exampleslb_HEADERS = \
-  adaptation.hh  loadbalance.hh
+  adaptation.hh  loadbalance.hh loadbalance_inline.hh
+
+headercheck_IGNORE = loadbalance_inline.hh
 
 # this does not compile with the old ALUGrid version
 if ! ALUGRID 
