--- a/dune/alugrid/test/Makefile.am
+++ b/dune/alugrid/test/Makefile.am
@@ -1,5 +1,6 @@
 check_PROGRAMS = test-alugrid
-TESTS = test-alugrid
+TESTS = test-alugrida
+SUBDIRS = dgf
 
 test_alugrid_SOURCES = test-alugrid.cc
 test_alugrid_CPPFLAGS = $(AM_CPPFLAGS) $(DUNEMPICPPFLAGS)
