--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -3,7 +3,7 @@ GRIDDIM = 3
 
 SUBDIRS = loadbalancing dgf
 
-EXTRA_DIST = alugrid.cfg *.dgf
+EXTRA_DIST = alugrid.cfg 
 
 DATACLEANFILES = dgfparser.log
 CLEANFILES = $(DATACLEANFILES)
@@ -14,7 +14,7 @@ examplesdir = $(includedir)/examples
 examples_HEADERS = \
   adaptation.hh        diagnostics.hh  piecewisefunction.hh  problem-euler.hh \
   problem-transport.hh datamap.hh      fvscheme.hh           problem-ball.hh \
-  problem.hh           threadmanager.hh
+  problem.hh           threadmanager.hh paralleldgf.hh
 
 check_PROGRAMS = main_transport main_ball main_euler
 
