--- a/examples/loadbalancing/Makefile.am
+++ b/examples/loadbalancing/Makefile.am
@@ -1,7 +1,7 @@
 GRIDTYPE = ALUGRID_CUBE
 GRIDDIM = 3
 
-EXTRA_DIST = *.dgf *.cfg
+EXTRA_DIST = *.cfg
 
 DATACLEANFILES = dgfparser.log
 CLEANFILES = $(DATACLEANFILES)
