add missing Makefile

--- a/configure.ac
+++ b/configure.ac
@@ -26,6 +26,7 @@ AC_CONFIG_FILES([
   dune/alugrid/impl/serial/Makefile
   dune/alugrid/impl/test/Makefile
   dune/alugrid/test/Makefile
+  dune/alugrid/test/dgf/Makefile
   lib/Makefile
   m4/Makefile
   examples/Makefile
