try a different callback mechanism - only improves by a few percent.

--- a/configure.ac
+++ b/configure.ac
@@ -30,6 +30,7 @@ AC_CONFIG_FILES([
   lib/Makefile
   m4/Makefile
   examples/Makefile
+  examples/callback/Makefile
   examples/dgf/Makefile
   examples/loadbalancing/Makefile
   dune-alugrid.pc
