added backuprestore test.

--- a/dune/alugrid/impl/test/Makefile.am
+++ b/dune/alugrid/impl/test/Makefile.am
@@ -1,6 +1,6 @@
-check_PROGRAMS = sizes
+check_PROGRAMS = sizes backuprestore
 
-sizes_SOURCES = sizes.cc \
+ALUSOURCES = \
   $(top_srcdir)/dune/alugrid/impl/serial/gitter_geo.cc \
   $(top_srcdir)/dune/alugrid/impl/serial/gitter_hexa_top.cc \
   $(top_srcdir)/dune/alugrid/impl/serial/gitter_impl.cc \
@@ -23,9 +23,15 @@ sizes_SOURCES = sizes.cc \
   $(top_srcdir)/dune/alugrid/impl/parallel/gitter_pll_sti.cc \
   $(top_srcdir)/dune/alugrid/impl/parallel/gitter_tetra_top_pll.cc
 
+sizes_SOURCES = sizes.cc $(ALUSOURCES) 
 sizes_CPPFLAGS = $(AM_CPPFLAGS) $(DUNEMPICPPFLAGS) -Wfatal-errors -DALUGRIDDEBUG
 sizes_LDFLAGS = $(AM_LDFLAGS) $(DUNEMPILDFLAGS)
 sizes_LDADD = ${ZOLTAN_LIBS} ${PARMETIS_LIBS} ${METIS_LIB} $(DUNEMPILIBS)
+
+backuprestore_SOURCES = backuprestore.cc $(ALUSOURCES) 
+backuprestore_CPPFLAGS = $(AM_CPPFLAGS) $(DUNEMPICPPFLAGS) -Wfatal-errors -DALUGRIDDEBUG
+backuprestore_LDFLAGS = $(AM_LDFLAGS) $(DUNEMPILDFLAGS)
+backuprestore_LDADD = ${ZOLTAN_LIBS} ${PARMETIS_LIBS} ${METIS_LIB} $(DUNEMPILIBS)
 
 include $(top_srcdir)/am/global-rules
 
