--- a/examples/Makefile.am
+++ b/examples/Makefile.am
@@ -1,4 +1,6 @@
 GRIDTYPE = ALUGRID_CUBE
+#GRIDTYPE = ALUGRID_SIMPLEX
+#GRIDTYPE = ALUGRID_CONFORM
 GRIDDIM = 3
 
 SUBDIRS = loadbalancing callback dgf
@@ -19,25 +21,16 @@ examples_HEADERS = \
 check_PROGRAMS = main_transport main_ball main_euler 
 
 main_transport_SOURCES = main.cc
-# main_transport_CPPFLAGS = $(AM_CPPFLAGS) $(USE_OMP) $(DUNEMPICPPFLAGS) $(ALL_PKG_CPPFLAGS) $(GRIDDIM_CPPFLAGS) -DTRANSPORT 
-# main_transport_LDFLAGS = $(AM_LDFLAGS) $(ALL_PKG_LDFLAGS) $(USE_OMP) $(DUNEMPILDFLAGS)
-# main_transport_LDADD = $(LDADD) $(ALL_PKG_LIBS) $(DUNEMPILIBS)
 main_transport_CPPFLAGS = $(AM_CPPFLAGS) $(USE_OMP) $(DUNEMPICPPFLAGS) $(GRIDDIM_CPPFLAGS) -DTRANSPORT
 main_transport_LDFLAGS = $(AM_LDFLAGS) $(DUNEMPILDFLAGS) $(USE_OMP) 
 main_transport_LDADD = $(LDADD) $(DUNEMPILIBS) 
 
 main_ball_SOURCES = main.cc
-# main_ball_CPPFLAGS = $(AM_CPPFLAGS) $(USE_OMP) $(DUNEMPICPPFLAGS) $(ALL_PKG_CPPFLAGS) $(GRIDDIM_CPPFLAGS) -DBALL
-# main_ball_LDFLAGS = $(AM_LDFLAGS) $(ALL_PKG_LDFLAGS) $(USE_OMP) $(DUNEMPILDFLAGS)
-# main_ball_LDADD = $(LDADD) $(ALL_PKG_LIBS) $(DUNEMPILIBS)
 main_ball_CPPFLAGS = $(AM_CPPFLAGS) $(USE_OMP) $(DUNEMPICPPFLAGS) $(GRIDDIM_CPPFLAGS) -DBALL 
 main_ball_LDFLAGS = $(AM_LDFLAGS) $(DUNEMPILDFLAGS) $(USE_OMP) 
 main_ball_LDADD = $(LDADD) $(DUNEMPILIBS) 
 
 main_euler_SOURCES = main.cc
-# main_euler_CPPFLAGS = $(AM_CPPFLAGS) $(USE_OMP) $(DUNEMPICPPFLAGS) $(ALL_PKG_CPPFLAGS) $(GRIDDIM_CPPFLAGS) -DEULER 
-# main_euler_LDFLAGS = $(AM_LDFLAGS) $(ALL_PKG_LDFLAGS) $(USE_OMP) $(DUNEMPILDFLAGS)
-# main_euler_LDADD = $(LDADD) $(ALL_PKG_LIBS) $(DUNEMPILIBS)
 main_euler_CPPFLAGS = $(AM_CPPFLAGS) $(USE_OMP) $(DUNEMPICPPFLAGS) $(GRIDDIM_CPPFLAGS) -DEULER
 main_euler_LDFLAGS = $(AM_LDFLAGS) $(DUNEMPILDFLAGS) $(USE_OMP) 
 main_euler_LDADD = $(LDADD) $(DUNEMPILIBS) 
