make macro grid conversion utility compile
Former-commit-id: 945b76ae49ceb256615947adfc1ee193376f7d16

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,6 +1,6 @@
 EXTRA_DIST = dune.module
 
-SUBDIRS = m4 lib dune examples
+SUBDIRS = m4 lib dune examples utils
 
 DISTCHECK_CONFIGURE_FLAGS = --with-dune-common=$(DUNE_COMMON_ROOT) --dune-geometry=$(DUNE_GEOMETRY_ROOT) --with-dune-grid=$(DUNE_GRID_ROOT) CXX="$(CXX)" CC="$(CC)"
 
